fix spacing above content pane
now there is enough space for the flash-messages to show up

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -46,11 +46,10 @@ div#page {
 }
 div#page_content {
   font-size: 80.0%;
-  margin-left:200px;
-  margin-right:200px;
+  margin: 1.8ex 200px;
   padding-left:1em;
   padding-right:1em;
-  padding-top:1ex;
+  padding-top: 2.2ex;
   padding-bottom:3ex;
   text-align: left;
   background: rgba($secondary_a, 0.23);
